upgrade vjson, which contains module-info